--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-datepicker": "^1.10.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-lines-ellipsis": "^0.15.4",
     "react-query": "^3.39.3",
