--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "math-intrinsics": "^1.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.5.0",
