--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-lines-ellipsis": "^0.15.4",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
