--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@glints/poppins": "^1.0.2",
-    "@reduxjs/toolkit": "^2.3.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.60.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-datepicker": "^1.10.0",
+    "compressorjs": "^1.2.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
@@ -25,7 +26,7 @@
     "react-lines-ellipsis": "^0.15.4",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
