--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
+    "js-base64": "^3.7.7",
     "jwt-decode": "^4.0.0",
     "math-intrinsics": "^1.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-lines-ellipsis": "^0.15.4",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
@@ -30,6 +32,8 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.0",
+    "save": "^2.9.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
