--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-base64": "^3.7.7",
     "jwt-decode": "^4.0.0",
     "math-intrinsics": "^1.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.5.0",
