--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-datepicker": "^1.10.0",
+    "chart.js": "^4.5.0",
     "compressorjs": "^1.2.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
@@ -27,6 +28,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
